--- a/thatknowfrontend/src/components/weather/WeatherGraph.css
+++ b/thatknowfrontend/src/components/weather/WeatherGraph.css
@@ -1,9 +1,8 @@
-.weatherContainer-wrapper {
+.weatherContainerWrapper {
   display: flex;
   align-items: center;
   position: relative;
   margin: 0 auto;
-  max-width: 100%;
   width: 100%;
 }
 
@@ -11,9 +10,9 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 5px;
-  border: 1px solid black;
   padding: 5px;
   overflow: hidden;
+  max-width: 100%;
   width: 100%;
 }
 
