--- a/thatknowfrontend/src/utils/UserStyles.css
+++ b/thatknowfrontend/src/utils/UserStyles.css
@@ -49,3 +49,29 @@ body {
     text-align: center;
     width: 120px;
 }
+
+
+
+.searchArea {
+    width: 280px;
+    margin: 10px 0;
+}
+.searchArea-list {
+    max-height: 200px; /* 최대 높이를 지정합니다. */
+    width: 280px;
+    overflow-y: auto; /* 세로 스크롤 바를 표시합니다. */
+}
+
+.searchArea-list ul {
+    list-style-type: none; /* 리스트 마커를 제거합니다. */
+    padding: 0; /* 내부 패딩을 제거합니다. */
+}
+
+.searchArea-list ul li {
+    padding: 10px; /* 각 리스트 아이템의 패딩을 지정합니다. */
+    cursor: pointer; /* 커서를 포인터로 변경하여 클릭 가능하게 합니다. */
+}
+
+.searchArea-list ul li:hover {
+    background-color: #f0f0f0; /* 호버 상태일 때 배경색을 변경합니다. */
+}
